GenShen: Misplaced assertion that old referent is marked during young collection

XMLWordPrintable

    • gc
    • b23

      Recently introduced assertion is too strong:
      ```
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/codebuild/output/src2096/src/s3/00/src/hotspot/share/gc/shenandoah/shenandoahReferenceProcessor.cpp:332), pid=1373, tid=1375
      # Error: Marking should be complete for object 0x00000007ffc029b0 in the Old generation
      ```

            Assignee:
            William Kemper
            Reporter:
            William Kemper
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: