8370726: GenShen: Misplaced assertion that old referent is marked during young collection

Reviewed-by: xpeng, ysr