src/hotspot/share/gc/shenandoah/shenandoahGeneration.cpp
@@ -800,7 +800,7 @@ ShenandoahGeneration::ShenandoahGeneration(ShenandoahGenerationType type,
                                            size_t max_capacity) :
   _type(type),
   _task_queues(new ShenandoahObjToScanQueueSet(max_workers)),
-  _ref_processor(new ShenandoahReferenceProcessor(MAX2(max_workers, 1U))),
+  _ref_processor(new ShenandoahReferenceProcessor(this, MAX2(max_workers, 1U))),
   _affiliated_region_count(0), _humongous_waste(0), _evacuation_reserve(0),
   _used(0), _bytes_allocated_since_gc_start(0),
   _max_capacity(max_capacity),
